# yard

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
src/yard/: curve.py  significance.py
src/yard/scripts/: __init__.py
test/: test_curve.py  test_data.py
yard/: __init__.py  curve.py  data.py  mathematics.py  roc.py  significance.py  transform.py  utils.py  version.py
yard/scripts/: __init__.py  auc.py  plot.py  significance.py
