[project]
name = "yard"
version = "0.3.0"
description = "Yet another ROC curve drawer"
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
license = "MIT"
readme = "README.rst"
urls = { "Repository" = "https://github.com/ntamas/yard" }
keywords = ["roc curve", "statistics", "mathematics", "machine learning", "auc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
]
requires-python = ">=3.10"

[project.optional-dependencies]
plotting = ["matplotlib>=3.4.1"]

[project.scripts]
yard-auc = "yard.scripts.auc:main"
yard-plot = "yard.scripts.plot:main"
yard-significance = "yard.scripts.significance:main"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
